--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -88,32 +88,16 @@ a {
     display: none;
 }
 
-/* feature cards */
-.square {
-    width: 100%;
-    height: 20vh;
-    background-size: cover;
-    background-position: center;
-}
-
-.square .card-body {
-    background:rgba(37, 36, 36, 0.829);
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    top: 0;
-    visibility: hidden;
-}
-
-.square:hover .card-body {
-    visibility: visible;
-}
-
 /* cards */
 .card-img-top {
     width: 100%;
     height: 30vh;
+    object-fit: cover;
+}
+
+.square {
+    width: 100%;
+    height: 20vh;
     object-fit: cover;
 }
 
@@ -325,20 +309,6 @@ padding: 4px; }
     #map {
         margin-top: 100px !important;
     }
-    .square .card-body {
-        background-color: rgba(52, 58, 64, 0.8);
-        position: absolute;
-        height: auto;
-        width: 100%;
-        color: #FFF;
-        top: 20%;
-        bottom: 20%;
-        z-index: 1;
-        visibility: visible;
-    }
-    .tooltip{
-        display: none;
-    }
 }
 
 @include media-query($on-laptop) {
@@ -353,20 +323,6 @@ padding: 4px; }
     }
     #map {
         margin-top: 100px !important;
-    }
-    .square .card-body {
-        background-color: rgba(52, 58, 64, 0.8);
-        position: absolute;
-        height: auto;
-        width: 100%;
-        color: #FFF;
-        top: 20%;
-        bottom: 20%;
-        z-index: 1;
-        visibility: visible;
-    }
-    .tooltip{
-        display: none;
     }
 }
 
