--- a/_layouts/collections.html
+++ b/_layouts/collections.html
@@ -3,135 +3,75 @@ layout: default
 ---
 {%- assign collections = site.data.digital_all_collections | where: "status","visible" -%}
 {%- assign fields = site.data.browse-config -%}
-{%- assign filters = site.data.browsebuttons -%}
 
-<div class="container-fluid px-0 pt-1 pb-3" style="margin-top: 105px">
-    <nav class="navbar navbar-default navbar-expand-md navbar-dark bg-dark">
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav m-auto">
-                <li class="nav-item dropdown mx-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Locations</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        {% for f in filters %}
-                        {% if f.category == 'Locations' %}
-                        <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ f.title}}</a>
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-                </li>
-                <li class="nav-item dropdown mx-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Subjects</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        {% for f in filters %}
-                        {% if f.category == 'Subjects' %}
-                        <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ f.title}}</a>
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-                </li>
-                <li class="nav-item dropdown mx-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Media Types</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        {% for f in filters %}
-                        {% if f.category == 'Media Types' %}
-                        <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ f.title}}</a>
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-                </li>
-                <li class="nav-item dropdown mx-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Idaho Places</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        {% for f in filters %}
-                        {% if f.category == 'Idaho' %}
-                        <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ f.title}}</a>
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-                </li>
-                <li class="nav-item dropdown mx-2">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">University of Idaho</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        {% for f in filters %}
-                        {% if f.category == 'University of Idaho' %}
-                        <a class="dropdown-item" href="{{ f.title | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ f.title}}</a>
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
-
-<div class="container">
-<div class="row mb-1 justify-content-center py-5">
-    <div class="col-md-8 text-center">
-        <div class="input-group input-group-lg">
-            <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Filter ... ">
-            <div class="input-group-append">
-                <button class="btn btn-ponderosa-pine" type="button" title="Search" alt="Search" id="goButton">Search</button>
-                <a class="btn btn-outline-secondary filter" href="collections.html" data-filter="">Reset</a>
+<div class="container pt-4">
+    <div class="row mb-1 justify-content-center py-5">
+        <div class="col-md-8 text-center">
+            <div class="input-group input-group-lg">
+                <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Filter ... ">
+                <div class="input-group-append">
+                    <button class="btn btn-ponderosa-pine" type="button" title="Search" alt="Search" id="goButton">Search</button>
+                    <a class="btn btn-outline-secondary filter" href="collections.html" data-filter="">Reset</a>
+                </div>
             </div>
+            <span class="info2 h2"><span id="numberOf">{{ collections | size }}</span> of {{ collections | size }} collections</span>
         </div>
-        <span class="info2 h2"><span id="numberOf">{{ collections | size }}</span> of {{ collections | size }} collections</span>
     </div>
 </div>
-</div>
 
 <div class="container">
-<div class="row">
-    <div class="col-md-12">
-        <div class="row" id="browseItems">
-            {% for c in collections %}
-            {% if c.status != 'noshow' %}
-            <div class="item col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 my-3">
-                <div class="card mb-3 border-secondary">
-                    {%- assign format-for-browse = c.mediatype | strip | split: ';' | downcase -%}
-                    <div class="container px-0" style="position: relative">
-                        <a href="#{{ c.collapse }}" id="collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="{{ c.collapse }}">
-                            <img class="card-img-top lazyload img-fluid" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
-                            <div class="highlight text-center py-2 px-2">{{ c.colltitle }}</div>
-                        </a>
-                    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row" id="browseItems">
+                {% for c in collections %}
+                {% if c.status != 'noshow' %}
+                <div class="item col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 my-3">
+                    <div class="card mb-3 border-secondary">
+                        {%- assign format-for-browse = c.mediatype | strip | split: ';' | downcase -%}
+                        <div class="container px-0" style="position: relative">
+                            <a href="#{{ c.collapse }}" id="collapseOne" data-toggle="collapse" aria-expanded="false" aria-controls="{{ c.collapse }}">
+                                <img class="card-img-top lazyload img-fluid" src="{{ c.image }}" alt="Image of {{ c.colltitle | escape }}">
+                                <div class="highlight text-center py-2 px-2">{{ c.colltitle }}</div>
+                            </a>
+                        </div>
 
-                    <div class="collapse" id="{{ c.collapse }}" aria-labelledby="collapseOne">
-                        <div class="card-body text-center search">
-                            <p>
-                                <span class="hidden-format-for-browse">{{ c.colltitle }}</span>
-                                {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ c[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
-                                {%- assign btns = btns | split: ';' | compact -%}
-                                {% for b in btns %}{% if b !=" " and b != "" %}
-                                <a class="btn btn-sm btn-secondary my-1 filter text-wrap" href="{{ b | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ b }}</a>
-                                {% endif %}{% endfor %}
-                            </p>
-                            <p class="card-text">
-                                {%- capture media -%}{{ c.mediatype | strip}}{%- endcapture -%}
-                                {%- assign media = media | split: ';' | compact -%}
-                                {% for m in media %}{% if m !=" " and m != "" %}
-                                <small><a href="{{ m | prepend: '/collections/#' | relative_url }}" class="filter btn btn-sm btn-outline-secondary my-1">{{ m | upcase }} <span class="{% if m contains 'image' %}far fa-image{% elsif m contains 'audio' %}far fa-file-audio{% elsif m contains 'video' %}far fa-file-video{% elsif m contains 'data' %}far fa-file-excel{% elsif m contains 'correspondence' %}far fa-envelope{% elsif m contains 'scores' %}fas fa-music{% elsif m contains 'illustration' %}fas fa-edit{% elsif m contains 'podcast' %}fas fa-podcast{% elsif m contains 'newspaper' %}far fa-newspaper{% elsif m contains 'map' %}fas fa-map-pin{% elsif m contains 'memorabilia' %}fas fa-box-open{%else%}far fa-file{% endif %}"></span></a></small>
-                                <span class="hidden-format-for-browse">{{format-for-browse | replace: "application", "application document"}}</span>
-                                {% endif %}{% endfor %}
-                            </p>
+                        <div class="collapse" id="{{ c.collapse }}" aria-labelledby="collapseOne">
+                            <div class="card-body text-center search">
+                                <p>
+                                    <span class="hidden-format-for-browse">{{ c.colltitle }}</span>
+                                    {%- capture btns -%}{% for f in fields %}{% if f.display-name-or-btn == 'btn' %}{{ c[f.field] | strip }};{% endif %}{% endfor %}{%- endcapture -%}
+                                    {%- assign btns = btns | split: ';' | compact -%}
+                                    {% for b in btns %}{% if b !=" " and b != "" %}
+                                    <a class="btn btn-sm btn-secondary my-1 filter text-wrap" href="{{ b | strip | url_param_escape | prepend: '/collections.html#' | relative_url }}">{{ b }}</a>
+                                    {% endif %}{% endfor %}
+                                </p>
+                                <p class="card-text">
+                                    {%- capture media -%}{{ c.mediatype | strip}}{%- endcapture -%}
+                                    {%- assign media = media | split: ';' | compact -%}
+                                    {% for m in media %}{% if m !=" " and m != "" %}
+                                    <small><a href="{{ m | prepend: '/collections/#' | relative_url }}" class="filter btn btn-sm btn-outline-secondary my-1">{{ m | upcase }} <span class="{% if m contains 'image' %}far fa-image{% elsif m contains 'audio' %}far fa-file-audio{% elsif m contains 'video' %}far fa-file-video{% elsif m contains 'data' %}far fa-file-excel{% elsif m contains 'correspondence' %}far fa-envelope{% elsif m contains 'scores' %}fas fa-music{% elsif m contains 'illustration' %}fas fa-edit{% elsif m contains 'podcast' %}fas fa-podcast{% elsif m contains 'newspaper' %}far fa-newspaper{% elsif m contains 'map' %}fas fa-map-pin{% elsif m contains 'memorabilia' %}fas fa-box-open{%else%}far fa-file{% endif %}"></span></a></small>
+                                    <span class="hidden-format-for-browse">{{format-for-browse | replace: "application", "application document"}}</span>
+                                    {% endif %}{% endfor %}
+                                </p>
 
 
-                            <p class="card-text"><small class="text-muted">
-                                    {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if c[f.field] %}
-                                    {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
-                                    {% unless forloop.last %}<br>{% endunless %}
-                                    {% endif %}{% endif %}{% endfor %}
-                                </small>
-                            </p>
-                            <hr>
-                            <a href="{{ c.website }}" class="btn btn-ponderosa-pine btn-round" title="link to {{ c.colltitle | escape }}" target="_blank" rel="noopener">View Collection</a>
+                                <p class="card-text"><small class="text-muted">
+                                        {% for f in fields %}{% if f.display-name-or-btn != 'btn' %}{% if c[f.field] %}
+                                        {% if f.display-name-or-btn %}<strong>{{ f.display-name-or-btn }}:</strong> {% endif %}{{ c[f.field] | truncatewords: 20 | replace: '""','"' }}
+                                        {% unless forloop.last %}<br>{% endunless %}
+                                        {% endif %}{% endif %}{% endfor %}
+                                    </small>
+                                </p>
+                                <hr>
+                                <a href="{{ c.website }}" class="btn btn-ponderosa-pine btn-round" title="link to {{ c.colltitle | escape }}" target="_blank" rel="noopener">View Collection</a>
 
+                            </div>
                         </div>
                     </div>
                 </div>
+                {% endif %}
+                {% endfor %}
             </div>
-            {% endif %}
-            {% endfor %}
         </div>
     </div>
-</div>
 </div>
