--- a/_includes/index/campus-collections.html
+++ b/_includes/index/campus-collections.html
@@ -1,6 +1,6 @@
 <h2 class="mb-3">Campus Collections</h2>
 <hr class="w-50">
-<div class="row justify-content-center pt-3 pb-4">
+<div class="row justify-content-center pt-3 pb-4 mx-5">
     <div class="card-deck" id="campusInner"></div>
 
 </div>
