lots of cleanup

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -5,11 +5,10 @@
 {% if page.layout == "collections" %}{% include js/browse-js.html %}{% include js/navscroll-js.html %}{% endif %}
 {% if page.layout == "subjects" %}{% include js/subjects-js.html %}{% endif %}
 {% if page.layout == "locations" %}{% include js/locations-js.html %}{% endif %}
-{% if page.layout == "timeline" %}{% include js/timeline-js.html %}{% endif %}
+{% if page.layout == "about" %}{% include js/sidebar-js.html %}{% endif %}
 {% if page.layout == "map" %}{% include js/map-js.html %}{% endif %}
 {% if layout.gallery == true %}{% include js/gallery-js.html %}{% endif %}
-{% if page.layout == "home-infographic" %}{% include js/featured-js.html %}{% include js/cdil-js.html %}{% include js/campus-js.html %}{% include js/banner-js.html %}{% endif %}
-{% include js/sidebar-js.html %}
+{% if page.layout == "home-infographic" %}{% include js/featured-js.html %}{% include js/campus-js.html %}{% include js/banner-js.html %}{% endif %}
 <script defer src="{{ '/fontawesome/js/all.min.js' | prepend: site.digital-assets }}"></script>
 <script>
 $(window).scroll(function(){
