--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="d-flex py-2 align-items-center navbar-brand">
-            <a id="banner-home" title="University of Idaho" class="d-none d-lg-block" href="https://www.lib.uidaho.edu/">
+            <a id="banner-home" title="University of Idaho" class="d-none d-lg-block" href="{{ '/' | relative_url }}">
                 <img class="img-fluid pr-4 lib-logo-lg" src="{{ 'idaho.png' | relative_url }}" alt="University of Idaho Library [logo]"></a>
 
             <a id="banner-home" title="Digital Initiatives" class="d-none d-md-block" href="{{ '/' | relative_url }}">
