--- a/_includes/js/banner-js.html
+++ b/_includes/js/banner-js.html
@@ -13,7 +13,7 @@
         return item !== value
     });
 
-    var feature = '<small><a style="background:rgb(52, 58, 64,.8);padding:.5em" class="text-info" href="https://www.lib.uidaho.edu/digital/' + (value.path) + '/items/' + (value.objectid) + '.html">Featured Image</a></small>';
+    var feature = '<small><a style="background:rgb(52, 58, 64,.8);padding:.5em" class="text-info" href="https://www.lib.uidaho.edu/digital/' + (value.path) + '/items/' + (value.objectid) + '.html" target="_blank" rel="noopener">Featured Image</a></small>';
 
     document.getElementById('feature-image').innerHTML = feature;
     
