fix gayrodeo image link

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,7 +4,7 @@ layout: home
 
 <style>
   .jumbotron-cdil {
-    background: url('https://www.voicesofgayrodeo.com/images/bg/bg005.jpg') no-repeat center;
+    background: url('https://www.lib.uidaho.edu/digital/objects/digital/gayrodeo.jpg') no-repeat center;
     background-size: cover;
     height: 60vh;
   }
