tweak search categories mobile btn to increase contrast

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -35,7 +35,7 @@
 {% if page.url contains "collections" %}
 <nav class="navbar navbar-default navbar-expand-md navbar-dark bg-dark categorynav" id="catnav">
     <div class="m-auto">
-        <button class="navbar-toggler btn-light" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler btn-clearwater" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             Search Categories
         </button>
     </div>
