no role button for links

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -31,9 +31,9 @@ layout: home
               </p>
               <p class="lead text-right">
                 Learn more about CDIL's: <br>
-                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-clearwater-light mx-1 mt-2" role="button">Projects</a>
-                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-clearwater-light mx-1 mt-2" role="button">Fellows</a>
-                <a href="https://cdil.lib.uidaho.edu/#events" class="btn btn-outline-clearwater-light mx-1 mt-2" role="button">Workshops</a>
+                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-clearwater-light mx-1 mt-2" >Projects</a>
+                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-clearwater-light mx-1 mt-2" >Fellows</a>
+                <a href="https://cdil.lib.uidaho.edu/#events" class="btn btn-outline-clearwater-light mx-1 mt-2" >Workshops</a>
               </p>
             </div>
           </div>
