target blank links on index

--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -28,13 +28,13 @@ lazyload: true
           <div class="card bg-dark" style="opacity: .85">
             <div class="card-text p-3">
               <h1 class="display-3 text-right">CD?L</h1>
-              <p class="text-right">The University of Idaho's <a href="https://cdil.lib.uidaho.edu/" class="pride-gold">Center for Digital Inquiry and Learning</a> fosters collaborative digital scholarship across a variety of disciplines.
+              <p class="text-right">The University of Idaho's <a href="https://cdil.lib.uidaho.edu/" class="pride-gold" target='_blank' rel='noopener'>Center for Digital Inquiry and Learning</a> fosters collaborative digital scholarship across a variety of disciplines.
               </p>
               <p class="lead text-right">
                 Learn more about CDIL's: <br>
-                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-clearwater-light mx-1 mt-2" >Projects</a>
-                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-clearwater-light mx-1 mt-2" >Fellows</a>
-                <a href="https://cdil.lib.uidaho.edu/#events" class="btn btn-outline-clearwater-light mx-1 mt-2" >Workshops</a>
+                <a href="https://cdil.lib.uidaho.edu/#projects" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Projects</a>
+                <a href="https://cdil.lib.uidaho.edu/#people" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Fellows</a>
+                <a href="https://cdil.lib.uidaho.edu/#events" class="btn btn-outline-clearwater-light mx-1 mt-2" target='_blank' rel='noopener'>Workshops</a>
               </p>
             </div>
           </div>
