--- a/_includes/js/campus-js.html
+++ b/_includes/js/campus-js.html
@@ -6,7 +6,7 @@
     var i;
     var cards = "";
     for (i=0; i < 3; i++) {
-        var card = "<div class='card text-center border-grey-color mx-4'><img class='card-img-top lazyload' data-src=" + campusItems[i].image + " alt='Card image cap'><div class='card-body border-top'><h4 class='card-title'><a href='" + campusItems[i].website + "'>" + campusItems[i].title + "</a></h4><p class='card-text'>" + campusItems[i].description + "</p></div><div class='card-footer'><a href='" + campusItems[i].website + "' class='btn btn-clearwater btn-round'>View Collection</a></div></div>";
+        var card = "<div class='card text-center border-secondary mx-4'><a href='" + campusItems[i].website + "' target='_blank' rel='noopener'><img class='card-img-top lazyload' data-src=" + campusItems[i].image + " alt='Card image cap'></a><div class='card-body border-top'><div class='card-title bg-dark titlebg py-2 px-2'><a class='text-white' href='" + campusItems[i].website + "' target='_blank' rel='noopener'>" + campusItems[i].title + "</a></div><p class='card-text text-muted pt-1'>" + campusItems[i].description + "</p></div><div class='card-footer'><a href='" + campusItems[i].website + "' class='btn btn-ponderosa-pine btn-round' target='_blank' rel='noopener'>View Collection</a></div></div>";
         cards += card;
     }
     campusImage.innerHTML = cards;
