collection nav border

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -33,7 +33,7 @@
     </div>
 </nav>
 {% if page.url contains "collections" %}
-<nav class="navbar navbar-default navbar-expand-md background-ponderosa-pine categorynav" id="catnav">
+<nav class="navbar navbar-default navbar-expand-md background-ponderosa-pine categorynav border-top border-light" id="catnav">
     <div class="m-auto">
         <button class="navbar-toggler btn-outline-light" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             Search Categories <span class="fa fa-angle-down"></span>
