--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -4,7 +4,7 @@ lazyload: true
 ---
 
 <style>
-  .jumbotron-cdil {
+  #jumbotron-cdil {
     background: url('https://www.lib.uidaho.edu/digital/objects/digital/gayrodeo.jpg') no-repeat center;
     background-size: cover;
     height: 60vh;
@@ -18,7 +18,7 @@ lazyload: true
 </div>
 
 <div class="pt-3 mt-4">
-  <div class="jumbotron jumbotron-fluid jumbotron-cdil d-flex align-items-center mb-0">
+  <div id="jumbotron-cdil" class="jumbotron jumbotron-fluid d-flex align-items-center mb-0">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 text-right text-white">
