remove card deck from campus collections

--- a/_includes/index/campus-collections.html
+++ b/_includes/index/campus-collections.html
@@ -1,5 +1,4 @@
 <h2 class="mb-3">Campus Collections</h2>
 <hr class="w-50">
-<div class="row justify-content-center pt-3 pb-4 mx-5">
-    <div class="card-deck" id="campusInner"></div>
+<div class="row justify-content-center pt-3 pb-4 px-5" id="campusInner">
 </div>
