--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -44,7 +44,7 @@ lazyload: true
   </div>
 </div>
 
-<div class="row pb-3 pt-5 px-5 bg-light">
+<div class="row pb-3 pt-5 bg-light">
   <div class="col-md-12 text-center">
     {% include index/campus-collections.html %}
   </div>
