--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -118,9 +118,12 @@ a {
     color: #FFF;
     /*top: 85px;*/
     z-index: 1;
+    bottom: 0;
+    /*
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+    */
 }
 
 .titlebg {
